# beryl

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  license_header.txt  rustfmt.toml
beryl-e2e/: Cargo.toml  README.md
beryl-e2e/src/: cluster.rs  data.rs  lib.rs  ports.rs  readiness.rs  services.rs  temp_state.rs
beryl-e2e/tests/: local_crud.rs  metadata_restart.rs  worker_restart.rs
beryl-metadata/: AGENTS.md  Cargo.toml  README.md
beryl-metadata/src/: config.rs  data_io.rs  error.rs  inflight_registry.rs  inode_lease.rs  lib.rs  lifecycle.rs  metrics.rs  observe.rs  path_resolver.rs  placement.rs  raft_conv.rs  readiness.rs  runtime.rs  session_registry.rs
beryl-metadata/src/maintenance/: lost_worker.rs  mod.rs  service.rs
beryl-metadata/src/mount/: mod.rs
beryl-metadata/src/raft/: command.rs  mod.rs  network.rs  node.rs  read_view.rs  response.rs  types.rs
beryl-metadata/src/service/: mod.rs  msync.rs  rpc.rs  wire.rs
beryl-metadata/src/state/: memory.rs  mod.rs  raft_store.rs
beryl-metadata/src/worker/: manager.rs  metrics.rs  mod.rs  service.rs  tests.rs
beryl-metadata/tests/: config_contract_tests.rs  lease_append_truncate_tests.rs  lifecycle_tests.rs  placement_tests.rs  service_error_contract_tests.rs
beryl-proto/: AGENTS.md  Cargo.toml  README.md  build.rs
beryl-proto/admin/: admin.proto
beryl-proto/common/: common.proto  errors.proto  header.proto
beryl-proto/fs/: types.proto
beryl-proto/metadata/: filesystem.proto  peer.proto  worker.proto
beryl-proto/src/: convert.rs  lib.rs
beryl-proto/worker/: block_meta.proto  data.proto  data_header.proto
beryl-ufs/: AGENTS.md  Cargo.toml  README.md
beryl-ufs/src/: capability.rs  error.rs  lib.rs  opendal_impl.rs  registry.rs  spec.rs  tests.rs  traits.rs
beryl-ufs/tests/: public_api_tests.rs
client/: AGENTS.md  Cargo.toml  README.md
client/src/: canonical.rs  config.rs  consistency.rs  context.rs  error.rs  lib.rs  metrics.rs  modes.rs  planner.rs  rpc_error.rs
client/src/api/: client.rs  fs_client.rs  handle.rs  hcfs.rs  mod.rs  options.rs  path.rs  runtime.rs  status.rs  tests.rs
client/src/cache/: file_meta.rs  layout.rs  mod.rs  route.rs  state_id.rs  worker_endpoint.rs
client/src/data/: channel_pool.rs  mod.rs  protocol.rs  tests.rs  worker.rs
client/src/meta/: client.rs  filesystem.rs  mod.rs  msync.rs  rpc_helper.rs
client/src/metadata/: gateway.rs  header.rs  mod.rs  model.rs  ops.rs  snapshot.rs
client/src/planner/: mod.rs  read_planner.rs  write_planner.rs
client/src/protocol/: mod.rs  validate.rs
client/src/routing/: group_role.rs  mod.rs  route_table.rs  selection.rs
client/src/runtime/: backoff.rs  classify.rs  client_runtime.rs  context.rs  decision.rs  executor.rs  mod.rs  policy.rs  refresh.rs  singleflight.rs
client/src/session/: mod.rs  write_session.rs
client/src/worker/: client.rs  mod.rs  tests.rs
client/tests/: client_v2_boundaries.rs  config_contract_tests.rs  local_crud.rs  metrics_public_api.rs  public_api_boundary.rs
common/: AGENTS.md  Cargo.toml  README.md
common/examples/: observe_demo.rs
common/src/: audit.rs  lib.rs
common/src/config/: env.rs  files.rs  flat.rs  keys.rs  mod.rs  validate.rs
common/src/error/: canonical_tests.rs  mod.rs  rpc_tests.rs
common/src/header/: codec.rs  mod.rs  tests.rs  types.rs
common/src/limit/: mod.rs
common/src/observe/: config.rs  error.rs  init.rs  metrics.rs  mod.rs  propagation.rs  tracing.rs
common/src/retry/: mod.rs
common/src/time/: mod.rs
common/tests/: repo_config_contract_tests.rs
e2e_tests/: Cargo.toml  README.md
e2e_tests/src/: cluster.rs  data.rs  lib.rs  ports.rs  readiness.rs  services.rs  temp_state.rs
e2e_tests/tests/: local_crud.rs  metadata_restart.rs  worker_restart.rs
integration_tests/: AGENTS.md  Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: client_contract.rs  config_contract_tests.rs
integration_tests/tests/common/: logging.rs  mod.rs  (+2 more)
metadata/: AGENTS.md  ARCHITECTURE_ZH.md  Cargo.toml  README.md  README_ZH.md
metadata/src/: bootstrap.rs  config.rs  data_io.rs  destructive_gate.rs  error.rs  file_handle.rs  inflight_registry.rs  inode_lease.rs  lease_runtime.rs  lib.rs  lifecycle.rs  metrics.rs  observe.rs  path_resolver.rs  placement.rs  raft_conv.rs  readiness.rs  root_init.rs  runtime.rs  session_registry.rs  ufs_proxy.rs  write_session.rs
metadata/tests/: acl_xattr_roundtrip_tests.rs  config_contract_tests.rs  conflict_protection_tests.rs  delete_executor_ack_reconcile_tests.rs  entrypoint_exposure_tests.rs  file_layout_locations_tests.rs  filesystem_session_tests.rs  fs_service_tests.rs  fsync_barrier_tests.rs  gc_convergence_tests.rs  gc_tests.rs  inode_service_authz_mode_tests.rs  inode_service_tests.rs  lease_append_truncate_tests.rs  lifecycle_tests.rs  overrep_tests.rs  path_service_error_semantics.rs  path_service_regression_tests.rs  path_service_static_tests.rs  path_service_tests.rs  placement_tests.rs  readiness_tests.rs  rename_noreplace_tests.rs  repair_replica_eviction_tests.rs  root_mount_tests.rs  service_error_contract_tests.rs  write_path_tests.rs
transport/: AGENTS.md  Cargo.toml
transport/examples/: replication_demo.rs
transport/src/: buffer.rs  connection.rs  convert.rs  ctx_adapter.rs  error.rs  lib.rs  pool.rs  retry.rs  transport.rs
ufs/: AGENTS.md  Cargo.toml  README.md
ufs/src/: capability.rs  client.rs  error.rs  lib.rs  opendal_impl.rs  registry.rs  spec.rs  tests.rs  traits.rs
worker/: AGENTS.md  Cargo.toml  README.md
worker/src/: admin.rs  block_manager.rs  block_store.rs  combo_validator.rs  command_executor.rs  config.rs  convert.rs  core.rs  data_header.rs  delete_op_log.rs  error.rs  eviction.rs  lib.rs  lifecycle.rs  metadata_client.rs  observe.rs  orphan.rs  pending_acks.rs  pipeline.rs  rebalance.rs  replication.rs  replication_tests.rs  rpc_server.rs  service.rs  stream_manager.rs  tests.rs  ufs_fill.rs  volume_health.rs  volume_manager.rs
worker/tests/: config_contract_tests.rs  lifecycle_tests.rs  state_logging_tests.rs  store_dirs_tests.rs
(+370 files in other folders)
