[workspace]
members = [
    "beryl-common",
    "beryl-types",
    "beryl-proto",
    "beryl-metadata",
    "beryl-ufs",
    "beryl-worker",
    "beryl-client",
    "beryl-e2e",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.95.0"

[workspace.dependencies]
# Config / serialization
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
bincode = { version = "2.0.1", features = ["serde"] }

# Async runtime / futures
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-test = "0.4.4"
futures = "0.3.31"
async-trait = "0.1.89"
async-stream = "0.3.5"

# RPC / transport
tonic = { version = "0.14.2", features = ["transport"] }
tonic-health = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = "0.5"
glommio = "0.9"

# Raft / consensus
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }

# Storage
rocksdb = { version = "0.22.0", default-features = false, features = ["snappy"] }
fs2 = "0.4.3"
opendal = { version = "0.55.0", features = ["services-fs", "services-s3", "services-oss"] }
tikv-jemalloc-ctl = "0.6.1"

# Observability (metrics / tracing)
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.18.1"

# HTTP / networking
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
http = "1.0"

# Common utilities
anyhow = "1.0.100"
thiserror = "2.0.17"
bytes = "1.11.0"
parking_lot = "0.12.5"
dashmap = "6.1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.1.0"
rand = "0.8.5"
libc = "0.2.161"
lru = "0.12.3"
sha2 = "0.10.8"

# Testing / tooling
insta = { version = "1.45.1", features = ["yaml", "redactions"] }
assert_fs = "1.1.3"
tempfile = "3.10.1"
clap = { version = "4.5.53", features = ["derive"] }
