[package]
name = "beryl-e2e"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "metadata-e2e-server"
path = "src/bin/metadata_e2e_server.rs"

[dependencies]
beryl-client = { path = "../beryl-client" }
beryl-common = { path = "../beryl-common" }
beryl-metadata = { path = "../beryl-metadata" }
beryl-proto = { path = "../beryl-proto" }
beryl-types = { path = "../beryl-types" }
beryl-worker = { path = "../beryl-worker" }

bytes = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true, features = ["transport"] }
