[package]
name = "beryl-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
beryl-common = { path = "../beryl-common" }
beryl-types = { path = "../beryl-types" }
beryl-proto = { path = "../beryl-proto" }
beryl-ufs = { path = "../beryl-ufs" }
bytes = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# RPC
tonic = { workspace = true, features = ["transport"] }
tonic-health = { workspace = true }
prost = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Observability
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
serde_yaml = { workspace = true }

# Raft
openraft = { workspace = true, features = ["serde", "storage-v2"] }

# Storage
rocksdb = { workspace = true, default-features = false, features = ["snappy"] }
fs2 = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }

# Hashing (for stable worker identity)
sha2 = { workspace = true }

# Random number generation (for jitter in storm control)
rand = { workspace = true }

[[bin]]
name = "beryl-metadata"
path = "src/bin/main.rs"

[dev-dependencies]
beryl-client = { path = "../beryl-client" }
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "registry"] }
