[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
common = { path = "../common" }
types = { path = "../types" }
proto = { path = "../proto" }
transport = { path = "../transport" }

# RPC
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }

# LRU cache
lru = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
assert_fs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport"] }
