[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
fastrand = { workspace = true }
chrono = { workspace = true }
types = { path = "../types" }
futures = { workspace = true }

# Observability dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "registry"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP server for Prometheus endpoint
tokio = { workspace = true, features = ["rt", "net", "sync", "fs", "io-util"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }

[features]
default = ["prometheus"]
prometheus = []

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "observe_demo"
path = "examples/observe_demo.rs"
