[package]
name = "e2e_tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
client = { path = "../client" }
common = { path = "../common" }
metadata = { path = "../metadata" }
proto = { path = "../proto" }
types = { path = "../types" }
worker = { path = "../worker" }

bytes = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true, features = ["transport"] }
