[package]
name = "metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
common = { path = "../common" }
types = { path = "../types" }
proto = { path = "../proto" }
ufs = { path = "../ufs" }
bytes = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# RPC
tonic = { workspace = true, features = ["transport"] }
tonic-health = { workspace = true }
prost = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Observability
tracing = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
serde_yaml = { workspace = true }

# Raft
openraft = { workspace = true, features = ["serde", "storage-v2"] }

# Storage
rocksdb = { workspace = true, default-features = false, features = ["snappy"] }
bincode = { workspace = true }

# Hashing (for stable worker identity)
sha2 = { workspace = true }

# Random number generation (for jitter in storm control)
rand = { workspace = true }

[[bin]]
name = "metadata"
path = "src/bin/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
