[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/bin/main.rs"

[dependencies]
types = { path = "../types" }
proto = { path = "../proto" }
common = { path = "../common" }
ufs = { path = "../ufs" }
transport = { path = "../transport" }
async-trait = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

# RPC
tonic = { workspace = true }
prost = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
