[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/bin/main.rs"

[dependencies]
types = { path = "../types" }
proto = { path = "../proto" }
common = { path = "../common" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }

# RPC
tonic = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
