[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[features]
default = []
io_uring = []
spdk = []

[[bin]]
name = "worker"
path = "src/bin/main.rs"

[dependencies]
types = { path = "../types" }
proto = { path = "../proto" }
common = { path = "../common" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
bytes = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

# RPC
tonic = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
